src/objects/Concomitant_Medication__c.object
<CustomObject>
    <fields>
        <fullName>Chemo_Treatment__c</fullName>
        <label>Chemo Treatment</label>
        <referenceTo>Chemo_Treatment__c</referenceTo>
        <relationshipLabel>Concomitant Medications</relationshipLabel>
        <relationshipName>Concomitant_Medications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DoseValue__c</fullName>
        <label>DoseValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dose__c</fullName>
        <label>Dose</label>
        <picklist>
            <picklistValues>
                <fullName>mcg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Day__c</fullName>
        <label>End Day</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Month__c</fullName>
        <label>End Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Once daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>q1w</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>q2w</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>q3w</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>q1m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medication</label>
        <referenceTo>Medication__c</referenceTo>
        <relationshipLabel>Concomitant Medications</relationshipLabel>
        <relationshipName>Concomitant_Medications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Madication__c</fullName>
        <label>Other Madication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Day__c</fullName>
        <label>Start Day</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <label>Start Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Medication</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pg_concomitant_medication__c</fullName>
        <label>pg_concomitant_medication</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Concomitant Medication</label>
    <nameField>
        <label>Concomitant Medication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concomitant Medications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>